# garmin-to-notion

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sync-treinos.py
.github/workflows/: cleanup.yml  keepalive.yml  sync.yml  sync_garmin_to_notion.yml
docs/: notion-ai-prompt.txt  notion-ai-update-prompt.txt  notion-template-setup.md
scripts/: browser_login.py  generate_tokens.py
src/garmin_to_notion/: __init__.py  __main__.py  clients.py  config.py  formatters.py  log.py  mappings.py  notion_helpers.py
src/garmin_to_notion/syncers/: __init__.py  activities.py  daily_steps.py  personal_records.py  sleep.py  summary.py  workouts.py
src/garmin_to_notion/tools/: __init__.py  cleanup_duplicates.py
