[project]
name = "garmin-to-notion"
version = "3.0.0"
description = "Sync your Garmin fitness data to Notion databases"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.19,<0.3",
    "notion-client==2.2.1",
    "python-dotenv>=1.0,<2.0",
]
